fix: fix pets slider gap

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -295,7 +295,7 @@ h2,
   display: flex;
   align-items: center;
   justify-content: space-between;
-  column-gap: 30px;
+  column-gap: 12px;
   margin-bottom: 60px;
 }
 
